--- a/docker/trustpoint/Dockerfile
+++ b/docker/trustpoint/Dockerfile
@@ -52,12 +52,12 @@ RUN sed -i '/DEBUG = True/s/True/False/' django/trustpoint/settings.py && \
 
 # Create and setup the /etc/trustpoint/ directory
 RUN mkdir -p /etc/trustpoint/ && \
-    cp -r /var/www/html/trustpoint/docker/* /etc/trustpoint/ && \
+    cp -r /var/www/html/trustpoint/docker/trustpoint/* /etc/trustpoint/ && \
     chown -R root:root /etc/trustpoint/ && \
     chmod -R 755 /etc/trustpoint/
 
 # Add sudoers file and configure user and restart sudo service
-RUN cp ./docker/wizard/sudoers /etc/sudoers && \
+RUN cp ./docker/trustpoint/wizard/sudoers /etc/sudoers && \
     chown root:root /etc/sudoers && \
     chmod 440 /etc/sudoers && \
     service sudo restart
@@ -70,11 +70,11 @@ RUN mkdir -p /etc/trustpoint/secrets && \
 
 # Remove any enabled Apache sites and add new Apache configuration
 RUN rm -f /etc/apache2/sites-enabled/* && \
-    cp ./docker/apache/trustpoint-http-init.conf /etc/apache2/sites-available/trustpoint-http-init.conf && \
+    cp ./docker/trustpoint/apache/trustpoint-http-init.conf /etc/apache2/sites-available/trustpoint-http-init.conf && \
     a2ensite trustpoint-http-init.conf
 
 # Make entrypoint script executable
-RUN chmod +x ./docker/entrypoint.sh
+RUN chmod +x ./docker/trustpoint/entrypoint.sh
 
 # Set entrypoint
-ENTRYPOINT ["docker/entrypoint.sh"]
+ENTRYPOINT ["docker/trustpoint/entrypoint.sh"]
