added matan gover mypy as recommended extension, also added dmypy executable setting

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,8 @@
   "recommendations": [
     "charliermarsh.ruff",
     "ms-python.debugpy",
-    "ms-python.mypy-type-checker",
     "ms-python.python",
+    "matangover.mypy",
     "ms-python.vscode-pylance",
     "njpwerner.autodocstring",
     "tamasfe.even-better-toml",
