--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,8 @@ services:
       - "443:443"
     depends_on:
       - postgres
-    volumes:
-        - trustpoint_config:/etc/trustpoint
-        - apache_config:/etc/apache2
     environment:
-      DATABASE_ENGINE: "django.db.backends.postgresql"
-      DATABASE_NAME: "trustpoint_db"
+      POSTGRES_DB: "trustpoint_db"
       DATABASE_USER: "admin"
       DATABASE_PASSWORD: "testing321"
       DATABASE_HOST: "postgres"
@@ -37,6 +33,4 @@ services:
       POSTGRES_DB: "trustpoint_db"
 
 volumes:
-  trustpoint_config:
-  apache_config:
   postgres_data:
