Ignoring "S101" for standalone "tests.py" files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,8 @@ exclude = ["**/migrations/*", "**/manage.py"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/tests/**/**.py" = ["S101"]
+"**/tests.py" = ["S101"]
+
 
 [tool.ruff.format]
 quote-style = "single"
