--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ keywords = ["django", "trustpoint", "server"]
 
 dependencies = [
     "crispy-bootstrap5~=2025.4",
-    "cryptography>=44.0.3",
+    "cryptography>=45.0.2",
     "django~=5.1.8",
     "django-crispy-forms~=2.3",
     "django-filter~=25.1",
@@ -20,7 +20,7 @@ dependencies = [
     "psycopg-binary>=3.2.6",
     "pyasn1>=0.6.1,<0.7",
     "pyasn1-modules>=0.4.1,<0.5",
-    "trustpoint-core>=0.2.2",
+    "trustpoint-core>=0.1.1",
     "zeroconf>=0.147,<0.148",
 ]
 
@@ -44,6 +44,9 @@ dev = [
     "werkzeug >= 3.1.3, < 4",
     "beautifulsoup4 >= 4.13.4",
     "ruff>=0.11.9",
+    "requests>=2.32.3",
+    "allure-behave>=2.14.2",
+    "allure-pytest>=2.14.2",
 ]
 # For building docs
 docs = [
@@ -82,6 +85,8 @@ exclude = ["**/migrations/*", "**/manage.py"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/tests/**/**.py" = ["S101"]
+"**/tests.py" = ["S101"]
+
 
 [tool.ruff.format]
 quote-style = "single"
@@ -111,11 +116,6 @@ pythonpath = ["trustpoint"]
 python_files = 'test_*.py'
 md_report = true
 md_report_output = 'md-report.md'
-
-[tool.behave]
-default_format = 'behave_html_pretty_formatter:PrettyHTMLFormatter'
-outfiles = ['behave-report.html']
-paths = ['trustpoint/features/']
 
 [tool.behave.userdata]
 'behave.formatter.html-pretty.title_string' = 'TrustPoint Test Report'
