WIP add SFTP support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,13 @@ dependencies = [
     "django-filter~=25.1",
     "django-stubs[compatible-mypy]>=5.2.0",
     "django-taggit>=6.1.0,<7",
+    "paramiko>=3.5.1",
     "psycopg>=3.2.6",
     "psycopg-binary>=3.2.6",
     "pyasn1>=0.6.1,<0.7",
     "pyasn1-modules>=0.4.1,<0.5",
     "trustpoint-core>=0.1.1",
+    "types-paramiko>=3.5.0.20250516",
     "zeroconf>=0.147,<0.148",
 ]
 
