Adjust filename in R_001 workflow

--- a/.github/workflows/r_001_feature_test.yml
+++ b/.github/workflows/r_001_feature_test.yml
@@ -10,4 +10,4 @@ jobs:
   test:
     uses: ./.github/workflows/behave-test-template.yml
     with:
-      feature_file: R_001_CRUD
+      feature_file: R_001_device_management
