--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "django-filter~=25.1",
     "django-stubs[compatible-mypy]==5.1.3",
     "django-taggit>=6.1.0,<7",
+    "packaging>=25.0",
     "paramiko>=3.5.1",
     "psycopg>=3.2.6",
     "psycopg-binary>=3.2.6",
