--- a/.dockerignore
+++ b/.dockerignore
@@ -7,3 +7,10 @@
 **/*.log.*
 **/db.sqlite3
 **/*.dump.gz
+docs
+.github
+.pytest_cache
+.ruff_cache
+**/.mypy_cache
+**/behave-report.html
+**/md-report.md
