--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "trustpoint"
-version = "0.2.0"
+version = "0.3.0.dev0"
 description = "Trustpoint Server Software"
-authors = [{ name = "TrustPoint-Project" }]
+authors = [{ name = "Trustpoint-Project" }]
 requires-python = "==3.12.*"
 readme = "README.md"
 license = { file = "LICENSE" }
