Fix most mypy errors

--- a/mypy.ini
+++ b/mypy.ini
@@ -8,7 +8,7 @@ exclude = ^(trustpoint/manage\.py$|tests/|.*/tests/|migrations/|.*/migrations/)
 [mypy.plugins.django-stubs]
 django_settings_module = trustpoint.settings
 
-# Per‐module overrides (ignore missing imports for crispy apps):
+# Per-module overrides (ignore missing imports for crispy apps):
 [mypy-crispy_bootstrap5.*]
 ignore_missing_imports = True
 
