--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Start TrustPoint Container
-        run: docker-compose -f docker/trustpoint/docker-compose.yml up -d
+        run: docker compose up -d
 
       - name: Fill trustpoint with demo data
         run: |
@@ -31,7 +31,7 @@ jobs:
 
       - name: Create Backup inside Container
         run: |
-          docker exec trustpoint sh -c "uv run trustpoint/manage.py trustpointbackup --filename ${{ inputs.artifact_name }}"
+          docker exec trustpoint sh -c "uv run trustpoint/manage.py trustpointbackup --filename from_outside"
 
       - name: Upload Backup as Artifact
         uses: actions/upload-artifact@v4
@@ -40,10 +40,10 @@ jobs:
           path: trustpoint/media/backups/
 
       - name: Stop and Remove Old Container
-        run: docker-compose -f docker/trustpoint/docker-compose.yml down -v
+        run: docker compose down -v
 
       - name: Start Fresh TrustPoint Container
-        run: docker-compose -f docker/trustpoint/docker-compose.yml up -d
+        run: docker compose up -d
 
       - name: Download Backup Artifact
         uses: actions/download-artifact@v4
