--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -18,19 +18,23 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Setup uv environment
+        uses: ./.github/actions/setup-uv-action
 
       - name: Start TrustPoint Container
-        run: docker compose up -d
+        run: docker compose -f docker-compose.yml up -d
 
-      - name: Fill trustpoint with demo data
+      - name: Apply Django Migrations
+        run: docker exec trustpoint sh -c "uv run trustpoint/manage.py migrate --noinput"
+
+      - name: Fill TrustPoint with Demo Data
         run: |
           docker exec trustpoint sh -c "uv run trustpoint/manage.py add_domains_and_devices"
+          docker exec trustpoint sh -c "uv run trustpoint/manage.py tls_cred"
 
       - name: Create Backup inside Container
-        run: |
-          docker exec trustpoint sh -c "uv run trustpoint/manage.py trustpointbackup --filename from_outside"
+        run: docker exec trustpoint sh -c \
+          "uv run trustpoint/manage.py trustpointbackup --filename ${{ inputs.artifact_name }}"
 
       - name: Upload Backup as Artifact
         uses: actions/upload-artifact@v4
@@ -39,10 +43,10 @@ jobs:
           path: trustpoint/media/backups/
 
       - name: Stop and Remove Old Container
-        run: docker compose down -v
+        run: docker compose -f docker-compose.yml down --volumes --remove-orphans
 
       - name: Start Fresh TrustPoint Container
-        run: docker compose up -d
+        run: docker compose -f docker-compose.yml up -d
 
       - name: Download Backup Artifact
         uses: actions/download-artifact@v4
@@ -52,5 +56,9 @@ jobs:
 
       - name: Restore Backup inside Container
         run: |
-          docker exec trustpoint sh -c "uv run trustpoint/manage.py dbrestore -z --noinput -I trustpoint/media/backups/${{ inputs.artifact_name }}"
+          docker exec trustpoint sh -c \
+            "uv run trustpoint/manage.py dbrestore -z --noinput -I trustpoint/media/backups/${{ inputs.artifact_name }}"
           docker exec trustpoint sh -c "uv run trustpoint/manage.py trustpointrestore"
+
+      - name: Cleanup Local Backup Files
+        run: rm -rf trustpoint/media/backups/${{ inputs.artifact_name }}
