--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -2,63 +2,71 @@
 name: Backup & Restore TrustPoint
 
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
       artifact_name:
-        description: 'Name des Backup-Artefakts'
-        required: true
-        type: string
-        default: 'trustpoint-backup'
+        description: 'Base name for your backup (without .dump.gz)'
+        required: false
+        default: 'from_outside'
 
 jobs:
-  backup-restore:
+  backup-and-restore:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup uv environment
-        uses: ./.github/actions/setup-uv-action
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Start TrustPoint Container
-        run: docker compose -f docker-compose.yml up -d
+      - name: Start TrustPoint container
+        run: docker compose up -d
 
-      - name: Apply Django Migrations
-        run: uv run trustpoint/manage.py migrate --noinput
+      - name: Apply migrations (inside container)
+        run: docker compose exec trustpoint \
+              uv run trustpoint/manage.py migrate --noinput
 
-      - name: Fill TrustPoint with Demo Data
+      - name: Fill demo data
         run: |
-          docker exec trustpoint sh -c "uv run trustpoint/manage.py add_domains_and_devices"
-          docker exec trustpoint sh -c "uv run trustpoint/manage.py tls_cred"
+          docker compose exec trustpoint \
+            uv run trustpoint/manage.py add_domains_and_devices
+          docker compose exec trustpoint \
+            uv run trustpoint/manage.py tls_cred
 
-      - name: Create Backup inside Container
-        run: docker exec trustpoint sh -c \
-          "uv run trustpoint/manage.py trustpointbackup --filename ${{ inputs.artifact_name }}"
+      - name: Create backup
+        run: docker compose exec trustpoint \
+             uv run trustpoint/manage.py trustpointbackup --filename ${{ github.event.inputs.artifact_name }}
 
-      - name: Upload Backup as Artifact
+      - name: Upload backup artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ inputs.artifact_name }}
-          path: trustpoint/media/backups/
+          name: ${{ github.event.inputs.artifact_name }}.dump.gz
+          path: trustpoint/media/backups/${{ github.event.inputs.artifact_name }}.dump.gz
 
-      - name: Stop and Remove Old Container
-        run: docker compose -f docker-compose.yml down --volumes --remove-orphans
+      - name: Stop & remove old container
+        run: docker compose down --volumes --remove-orphans
 
-      - name: Start Fresh TrustPoint Container
-        run: docker compose -f docker-compose.yml up -d
+      - name: Start fresh TrustPoint container
+        run: docker compose up -d
 
-      - name: Download Backup Artifact
+      - name: Apply migrations on fresh container
+        run: docker compose exec trustpoint \
+              uv run trustpoint/manage.py migrate --noinput
+
+      - name: Download backup artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ inputs.artifact_name }}
+          name: ${{ github.event.inputs.artifact_name }}.dump.gz
           path: trustpoint/media/backups/
 
-      - name: Restore Backup inside Container
+      - name: Restore backup (inside container)
         run: |
-          docker exec trustpoint sh -c \
-            "uv run trustpoint/manage.py dbrestore -z --noinput -I trustpoint/media/backups/${{ inputs.artifact_name }}"
-          docker exec trustpoint sh -c "uv run trustpoint/manage.py trustpointrestore"
+          docker compose exec trustpoint \
+            uv run trustpoint/manage.py dbrestore -z --noinput \
+            -I trustpoint/media/backups/${{ github.event.inputs.artifact_name }}.dump.gz
+          docker compose exec trustpoint \
+            uv run trustpoint/manage.py trustpointrestore
 
-      - name: Cleanup Local Backup Files
-        run: rm -rf trustpoint/media/backups/${{ inputs.artifact_name }}
+      - name: Cleanup local backup file
+        run: rm -f trustpoint/media/backups/${{ github.event.inputs.artifact_name }}.dump.gz
