--- a/.github/workflows/r_006_feature_test.yml
+++ b/.github/workflows/r_006_feature_test.yml
@@ -1,13 +1,16 @@
-name: R_006
+# .github/workflows/ci-backup.yml
+name: CI with Backup & Restore
 
 on:
-  pull_request:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      backup_name:
+        description: 'Name für das Backup (ohne .dump.gz)'
+        required: false
+        default: 'ci_backup'
 
 jobs:
   backup-and-restore:
     uses: ./.github/workflows/backup-restore.yml
     with:
-      artifact_name: 'from_outside.dump.gz'
+      artifact_name: ${{ github.event.inputs.backup_name }}
