--- a/.github/workflows/r_006_feature_test.yml
+++ b/.github/workflows/r_006_feature_test.yml
@@ -1,7 +1,10 @@
-# .github/workflows/ci-backup.yml
-name: CI with Backup & Restore
+name: R_006
 
 on:
+  pull_request:
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       backup_name:
