--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -5,7 +5,7 @@ on:
   workflow_call:
     inputs:
       artifact_name:
-        description: 'Basis-Name für das Backup (Suffix .dump.gz wird automatisch angehängt)'
+        description: 'Base name for the backup (".dump.gz" is added automatically)'
         required: false
         type: string
         default: 'from_outside'
@@ -19,22 +19,18 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Start TrustPoint container
-        run: docker compose -f docker-compose.yml up -d
+        run: docker compose up -d
 
       - name: Apply migrations (in-container)
-        run: docker compose exec trustpoint \
-             uv run trustpoint/manage.py migrate --noinput
+        run: docker compose exec trustpoint uv run trustpoint/manage.py migrate --noinput
 
       - name: Fill demo data (in-container)
         run: |
-          docker compose exec trustpoint \
-            uv run trustpoint/manage.py add_domains_and_devices
-          docker compose exec trustpoint \
-            uv run trustpoint/manage.py tls_cred
+          docker compose exec trustpoint uv run trustpoint/manage.py add_domains_and_devices
+          docker compose exec trustpoint uv run trustpoint/manage.py tls_cred
 
       - name: Create backup (in-container)
-        run: docker compose exec trustpoint \
-             uv run trustpoint/manage.py trustpointbackup --filename ${{ inputs.artifact_name }}
+        run: docker compose exec trustpoint uv run trustpoint/manage.py trustpointbackup --filename ${{ inputs.artifact_name }}
 
       - name: Upload backup artifact
         uses: actions/upload-artifact@v4
@@ -43,14 +39,13 @@ jobs:
           path: trustpoint/media/backups/${{ inputs.artifact_name }}.dump.gz
 
       - name: Stop & remove old container
-        run: docker compose -f docker-compose.yml down --volumes --remove-orphans
+        run: docker compose down --volumes --remove-orphans
 
       - name: Start fresh TrustPoint container
-        run: docker compose -f docker-compose.yml up -d
+        run: docker compose up -d
 
       - name: Apply migrations on fresh container
-        run: docker compose exec trustpoint \
-             uv run trustpoint/manage.py migrate --noinput
+        run: docker compose exec trustpoint uv run trustpoint/manage.py migrate --noinput
 
       - name: Download backup artifact
         uses: actions/download-artifact@v4
@@ -60,11 +55,8 @@ jobs:
 
       - name: Restore backup (in-container)
         run: |
-          docker compose exec trustpoint \
-            uv run trustpoint/manage.py dbrestore -z --noinput \
-              -I trustpoint/media/backups/${{ inputs.artifact_name }}.dump.gz
-          docker compose exec trustpoint \
-            uv run trustpoint/manage.py trustpointrestore
+          docker compose exec trustpoint uv run trustpoint/manage.py dbrestore -z --noinput -I trustpoint/media/backups/${{ inputs.artifact_name }}.dump.gz
+          docker compose exec trustpoint uv run trustpoint/manage.py trustpointrestore
 
       - name: Cleanup local backup file
         run: rm -f trustpoint/media/backups/${{ inputs.artifact_name }}.dump.gz
