--- a/docker/trustpoint/Dockerfile
+++ b/docker/trustpoint/Dockerfile
@@ -93,7 +93,8 @@ RUN mkdir -p /etc/trustpoint/secrets && \
 # Remove any enabled Apache sites and add new Apache configuration
 RUN rm -f /etc/apache2/sites-enabled/* && \
     cp ./docker/trustpoint/apache/trustpoint-http-init.conf /etc/apache2/sites-available/trustpoint-http-init.conf && \
-    a2ensite trustpoint-http-init.conf
+    a2ensite trustpoint-http-init.conf && \
+    echo 'ServerName trustpoint' >> /etc/apache2/apache2.conf
 
 # Make entrypoint script executable
 RUN chmod +x ./docker/trustpoint/entrypoint.sh
