--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -40,16 +40,8 @@ jobs:
           docker build -t trustpointproject/trustpoint:latest -f docker/trustpoint/Dockerfile .
           docker run -d --name trustpoint --link postgres -p80:80 -p443:443 -ePOSTGRES_DB=trustpoint_db -eDATABASE_USER=admin -eDATABASE_PASSWORD=testing321 -eDATABASE_HOST=postgres -eDATABASE_PORT=5432 trustpointproject/trustpoint:latest
       
-      - name: Wait for HTTP service
-        run: |
-          for i in {1..30}; do
-            if curl --fail -s http://localhost/; then
-              echo "Service is up"; exit 0
-            fi
-            echo "Waiting for service…"; sleep 2
-          done
-          echo "Service never became ready" >&2
-          exit 1
+      - name: Run post-restore validation
+        run: tests/scripts/test_successful_restoration.sh
 
       - name: Create backup (in-container)
         run: docker exec trustpoint sh -c "uv run trustpoint/manage.py trustpointbackup --filename from_outside"
@@ -75,13 +67,5 @@ jobs:
       - name: Restore trustpoint
         run: docker exec trustpoint sh -c "uv run trustpoint/manage.py trustpointrestore"
 
-      - name: Wait for HTTP service
-        run: |
-          for i in {1..30}; do
-            if curl --fail -s http://localhost/; then
-              echo "Service is up"; exit 0
-            fi
-            echo "Waiting for service…"; sleep 2
-          done
-          echo "Service never became ready" >&2
-          exit 1
+      - name: Run post-restore validation
+        run: tests/scripts/test_successful_restoration.sh
