--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build and start database
         run: |
           docker build -t trustpointproject/postgres:latest -f docker/db/Dockerfile .
-          docker run -d --name postgres -p 5432:5432 -e POSTGRES_USER=admin   -e POSTGRES_PASSWORD=testing321   -e POSTGRES_DB=trustpoint_db   trustpointproject/postgres:latest
+          docker run -d --name --link postgres -p 5432:5432 -e POSTGRES_USER=admin   -e POSTGRES_PASSWORD=testing321   -e POSTGRES_DB=trustpoint_db   trustpointproject/postgres:latest
 
       - name: Setup uv environment
         uses: ./.github/actions/setup-uv-action
