--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install GNU gettext (msgfmt)
+        run: sudo apt-get update && sudo apt-get install -y gettext
+      
       - name: Checkout code
         uses: actions/checkout@v4
 
